date-input: fix default placeholder alignment

--- a/webapp/src/components/Toolbar/DateInput/style.css
+++ b/webapp/src/components/Toolbar/DateInput/style.css
@@ -9,10 +9,6 @@
   box-sizing: border-box;
 }
 
-.label {
-  display: flex;
-}
-
 .icon {
   color: #999999;
   display: flex;
@@ -37,6 +33,7 @@
 
 .flex {
   display: flex;
+  width: 100%;
 }
 
 .inputWrap {
